mensaje de commit

--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="keywords" content="<meta name="keywords" content="danza, ballet, contemporáneo, hip hop, salsa, tango, folclore, danza clásica, danza moderna, danza española, danza africana, danza oriental, danza del vientre, coreografía, bailarín, bailarina, academia de danza, clases de baile, vestuario de danza, ejercicio, expresión corporal, creatividad, festival de danza, concurso de baile, gala de danza">">
+    <meta name="keywords" content="<meta name="keywords" content="danza, ballet, contemporáneo, hip hop, salsa, tango, folclore, danza clásica, danza moderna, danza española, danza africana, danza oriental, danza del vientre, coreografía, bailarín, bailarina, academia de danza, clases de baile, vestuario de danza, ejercicio, expresión corporal, creatividad, festival de danza, concurso de baile, gala de danza">
 
     <meta name="description" content="Descubre el mundo de la danza. Aprende sobre diferentes estilos, encuentra clases cerca de ti y conoce a bailarines de todo el mundo.">
-    
+
+<link rel="shortcut icon" href="/assets/Verity.svg" type="image/x-icon">
     <title>dancehealthy</title>
 </head>
 <body>
