menu de navegacion y jumbotron

--- a/index.html
+++ b/index.html
@@ -1,18 +1,53 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="keywords" content="<meta name="keywords" content="danza, ballet, contemporáneo, hip hop, salsa, tango, folclore, danza clásica, danza moderna, danza española, danza africana, danza oriental, danza del vientre, coreografía, bailarín, bailarina, academia de danza, clases de baile, vestuario de danza, ejercicio, expresión corporal, creatividad, festival de danza, concurso de baile, gala de danza">
+    <meta name="keywords" content="<meta name=" keywords"
+        content="danza, ballet, contemporáneo, hip hop, salsa, tango, folclore, danza clásica, danza moderna, danza española, danza africana, danza oriental, danza del vientre, coreografía, bailarín, bailarina, academia de danza, clases de baile, vestuario de danza, ejercicio, expresión corporal, creatividad, festival de danza, concurso de baile, gala de danza">
 
-    <meta name="description" content="Descubre el mundo de la danza. Aprende sobre diferentes estilos, encuentra clases cerca de ti y conoce a bailarines de todo el mundo.">
+    <meta name="description"
+        content="Descubre el mundo de la danza. Aprende sobre diferentes estilos, encuentra clases cerca de ti y conoce a bailarines de todo el mundo.">
 
-<link rel="shortcut icon" href="/assets/Verity.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="/assets/Verity.svg" type="image/x-icon">
     <title>dancehealthy</title>
 </head>
+
 <body>
-    
+    <header>
+        <nav>
+            <img src="/assets/Verity.svg" alt="">
+
+            <ul>
+                <li>inicio</li>
+                <li>notificaciones</li>
+                <li>nosotros</li>
+
+
+            </ul>
+
+            <button>contactanos</button>
+        </nav>
+
+    </header>
+
+    <main>
+
+        <section>
+            <h1>"Tu cuerpo, tu templo. Cuídalo bailando."</h1>
+        </section>
+
+        <section>
+            <div>bailarines y su anatomia</div>
+            <div>que hace bailar en tu cuerpo?</div>
+            <div>bailarines y su salud mental</div>
+            
+        </section>
+    </main>
+
 </body>
+
 </html>
