--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
             <img src="/assets/Verity.svg" alt="">
 
             <ul>
-                <li>inicio</li>
+                <li>
+                    <a href="/">Inicio</a>
+                </li>
                 <li>notificaciones</li>
                 <li>nosotros</li>
 
