nav, jumbotron etc

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
         content="Descubre el mundo de la danza. Aprende sobre diferentes estilos, encuentra clases cerca de ti y conoce a bailarines de todo el mundo.">
 
     <link rel="shortcut icon" href="/assets/Verity.svg" type="image/x-icon">
-    <title>dancehealthy</title>
+    <title>dancehealthy</title> 
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -31,14 +32,14 @@
 
             </ul>
 
-            <button>contactanos</button>
+            <button class="button">contactanos</button>
         </nav>
 
     </header>
 
     <main>
 
-        <section>
+        <section class="jumbotron">
             <h1>"Tu cuerpo, tu templo. Cuídalo bailando."</h1>
         </section>
 
