--- a/index.html
+++ b/index.html
@@ -44,29 +44,29 @@
         </section>
 
         <section>
-            <div>
+            <div class="card">
                 <img src="assets/9cc182bc-9001-46a6-8697-57c7ca67513f 1.svg" alt="">
-                <div>
-                    <h2>BAILARINES Y SU ANATOMIA</h2>
-                    <p>La enseñanza de la anatomia aplicada a la danza nos permite, ser conscientes de la importancia
+                <div class="card__contenedor">
+                    <h2 class="card__contenedor__titulo">BAILARINES Y SU ANATOMIA</h2>
+                    <p class="card__contenedor__description">La enseñanza de la anatomia aplicada a la danza nos permite, ser conscientes de la importancia
                         del cuerpo como instrumento, al que hay que conocer cuidar y valorar. </p>
                 </div>
             </div>
-            <div>
+            <div class="card">
                 <img src="assets/9cc182bc-9001-46a6-8697-57c7ca67513f 1 (1).svg" alt="">
-                <div>
-                    <h2>QUE HACE BAILAR EN TU CUERPO? </h2>
-                    <p>Ejercita tu corazon, ayuda a fortalecer musculos y huesos y trabajas en tu equilibrio.</p>
+                <div class="card_contenedor">
+                    <h2 class="card__contenedor__titulo">QUE HACE BAILAR EN TU CUERPO? </h2>
+                    <p class="card__contenedor__description">Ejercita tu corazon, ayuda a fortalecer musculos y huesos y trabajas en tu equilibrio.</p>
 
                 </div>
 
             </div>
-            <div>
+            <div class="card">
                 <img src="assets/9cc182bc-9001-46a6-8697-57c7ca67513f 1 (3).svg" alt="">
-                <div>
+                <div class="card_contenedor">
 
-                    <h2>BAILARINES Y SU SALUD MENTAL</h2>
-                    <p>Cuando bailamos liberamos endorfinas en nuestro cerebro que actuan como neurotransmisores</p>
+                    <h2 class="card__contenedor__titulo">BAILARINES Y SU SALUD MENTAL</h2>
+                    <p class="card__contenedor__description">Cuando bailamos liberamos endorfinas en nuestro cerebro que actuan como neurotransmisores</p>
                 </div>
             </div>
 
