--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         content="Descubre el mundo de la danza. Aprende sobre diferentes estilos, encuentra clases cerca de ti y conoce a bailarines de todo el mundo.">
 
     <link rel="shortcut icon" href="/assets/Verity.svg" type="image/x-icon">
-    <title>dancehealthy</title> 
+    <title>dancehealthy</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -43,30 +43,33 @@
             <h1>"Tu cuerpo, tu templo. Cuídalo bailando."</h1>
         </section>
 
-        <section>
+        <section class="section__card">
             <div class="card">
-                <img src="assets/9cc182bc-9001-46a6-8697-57c7ca67513f 1.svg" alt="">
+                <img class="card__img" src="assets/9cc182bc-9001-46a6-8697-57c7ca67513f 1.svg" alt="">
                 <div class="card__contenedor">
                     <h2 class="card__contenedor__titulo">BAILARINES Y SU ANATOMIA</h2>
-                    <p class="card__contenedor__description">La enseñanza de la anatomia aplicada a la danza nos permite, ser conscientes de la importancia
+                    <p class="card__contenedor__description">La enseñanza de la anatomia aplicada a la danza nos
+                        permite, ser conscientes de la importancia
                         del cuerpo como instrumento, al que hay que conocer cuidar y valorar. </p>
                 </div>
             </div>
             <div class="card">
-                <img src="assets/9cc182bc-9001-46a6-8697-57c7ca67513f 1 (1).svg" alt="">
+                <img class="card__img" src="assets/9cc182bc-9001-46a6-8697-57c7ca67513f 1 (1).svg" alt="">
                 <div class="card_contenedor">
                     <h2 class="card__contenedor__titulo">QUE HACE BAILAR EN TU CUERPO? </h2>
-                    <p class="card__contenedor__description">Ejercita tu corazon, ayuda a fortalecer musculos y huesos y trabajas en tu equilibrio.</p>
+                    <p class="card__contenedor__description">Ejercita tu corazon, ayuda a fortalecer musculos y huesos y
+                        trabajas en tu equilibrio.</p>
 
                 </div>
 
             </div>
             <div class="card">
-                <img src="assets/9cc182bc-9001-46a6-8697-57c7ca67513f 1 (3).svg" alt="">
+                <img class="ca" src="assets/9cc182bc-9001-46a6-8697-57c7ca67513f 1 (3).svg" alt="">
                 <div class="card_contenedor">
 
                     <h2 class="card__contenedor__titulo">BAILARINES Y SU SALUD MENTAL</h2>
-                    <p class="card__contenedor__description">Cuando bailamos liberamos endorfinas en nuestro cerebro que actuan como neurotransmisores</p>
+                    <p class="card__contenedor__description">Cuando bailamos liberamos endorfinas en nuestro cerebro que
+                        actuan como neurotransmisores</p>
                 </div>
             </div>
 
@@ -74,41 +77,49 @@
 
         </section>
 
-        <section>
-            <div>
+        <section class="registro_sesion">
+            <div class="registro_sesion_idioma">
                 <select name="" id="">
-                    <option value="">Español Latino america</option>
+                    <option class="registro_sesion_idioma_idioma" value="">Español Latino América</option>
                 </select>
-                <button>iniciar sesion</button>
+                <button class="registro_sesion_idioma_iniciar">iniciar sesion</button>
             </div>
             <div>
 
-                <div>
-                    <h1>Explora en el mundo de la danza</h1>
-                    <p>conoce sobre la danza, el movimiento y la vida del bailarin.</p>
-        
+                <div class="informacion">
+                    <h1 class="informacion_2">Explora en el mundo de la danza</h1>
+                    <p class="informacion_3">conoce sobre la danza, el movimiento y la vida del bailarin.</p>
+
                 </div>
 
-                <div>
-                    <p>List@ para comenzar? usa tu email para abrir una cuenta.</p>
-                    <form action="">
-                        <input type="text">
-                        <button type="submit">comenzar</button>
+                <div class="comienzo">
+                    <p class="comienzo_2">List@ para comenzar? usa tu email para abrir una cuenta.</p>
+                    <form class="comienzo_a" action="">
+                        <input class="comienzo_3" type="correo electronico">
+                        <button class="comienzo_button" type="submit">comenzar</button>
                     </form>
 
                 </div>
 
             </div>
 
-
-
         </section>
 
-
-
-
-
     </main>
+
+    <footer class="footer">
+        <div class="footer_1">
+            <div>
+                <p class="email">EMAIL</p>
+                <p class="correo">dancehealthy@gmail.com</p>
+            </div>
+
+             <img src="/assets/Verity.svg" alt="">
+
+             <p class="copyright">© 2024— Copyright</p>
+
+        </div>
+    </footer>
 </body>
 
 </html>
