--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
             </div>
             <div class="card">
-                <img class="ca" src="assets/9cc182bc-9001-46a6-8697-57c7ca67513f 1 (3).svg" alt="">
+                <img class="card__img" src="assets/9cc182bc-9001-46a6-8697-57c7ca67513f 1 (3).svg" alt="">
                 <div class="card_contenedor">
 
                     <h2 class="card__contenedor__titulo">BAILARINES Y SU SALUD MENTAL</h2>
